--- a/wordtoexcelconversions/package.json
+++ b/wordtoexcelconversions/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.23.2",
     "axios": "^1.7.9",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
